# Snowflaker

./: .gitignore  CMakeLists.txt  README.md
include/: NGLScene.h  snowflake.h
shaders/: SnowflakeFragment.glsl  SnowflakeVertex.glsl
src/: NGLScene.cpp  main.cpp  snowflake.cpp
